[project]
name = "robot-see"
version = "1.0.0"
description = "A visualization tool for robot models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=6.0.2",
    "numpy>=2.2.6",
    "pillow>=12.1.1",
    "trimesh>=4.11.2",
    "tyro>=1.0.7",
    "viser>=1.0.22",
    "usd-core>=25.11",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
    "types-lxml>=2026.2.16",
    "types-usd>=24.5.2",
]

[tool.uv]
package = true

[project.scripts]
robot-see = "robot_see.cli:tyro_cli"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robot_see"]

[tool.ty.rules]
possibly-missing-attribute = "ignore"
unresolved-attribute = "ignore"
